bld/wipfc/test/pos/pos8.ipf
:userdoc.
:title.Positive 8
:docprof.

.im pos8a.ipf

:euserdoc.

