bld/wipfc/test/neg/neg6.ipf
:userdoc.
:title.Negative 6
:docprof.
:h1.Cannot open file
.im not_present.ipf
:euserdoc.
